--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Forex Fetcher</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+   <!---Body Content---->
 
+    
+     <script src="ForexFetcher.js">
+  </body>
+</html>
