Added meta tags and a closed </script> tag.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forex Fetcher</title>
     <link rel="stylesheet" href="styles.css">
   </head>
@@ -8,6 +10,6 @@
    <!---Body Content---->
 
     
-     <script src="ForexFetcher.js">
+     <script src="ForexFetcher.js"></script>
   </body>
 </html>
